[gd_scene load_steps=11 format=2]

[ext_resource path="res://theme/editor_theme.tres" type="Theme" id=1]
[ext_resource path="res://editor/editor.gd" type="Script" id=2]
[ext_resource path="res://editor/play_btn.gd" type="Script" id=3]
[ext_resource path="res://editor/start_pos_input.tscn" type="PackedScene" id=4]
[ext_resource path="res://editor/bpm_input.tscn" type="PackedScene" id=5]
[ext_resource path="res://AudioWaveform.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio.ogg" type="AudioStream" id=7]
[ext_resource path="res://editor/Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://editor/ZoomBtn.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.857361
margin_right = 0.857422
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginCont_file" type="MarginContainer" parent="."]
margin_left = 15.0
margin_top = 17.0
margin_right = 143.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_btn_cont" type="HBoxContainer" parent="MarginCont_file"]
margin_right = 164.0
margin_bottom = 31.0

[node name="import_btn" type="Button" parent="MarginCont_file/file_btn_cont"]
margin_right = 64.0
margin_bottom = 31.0
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_btn" type="Button" parent="MarginCont_file/file_btn_cont"]
margin_left = 68.0
margin_right = 115.0
margin_bottom = 31.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_btn" type="Button" parent="MarginCont_file/file_btn_cont"]
margin_left = 119.0
margin_right = 164.0
margin_bottom = 31.0
text = "load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginCont_play" type="MarginContainer" parent="."]
margin_left = 266.0
margin_top = 17.0
margin_right = 304.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_btn_cont" type="HBoxContainer" parent="MarginCont_play"]
margin_right = 38.0
margin_bottom = 31.0

[node name="play_btn" type="Button" parent="MarginCont_play/play_btn_cont"]
margin_right = 12.0
margin_bottom = 31.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginCont_zoom" type="MarginContainer" parent="."]
margin_left = 345.0
margin_top = 18.0
margin_right = 427.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomBtn" parent="MarginCont_zoom" instance=ExtResource( 9 )]
margin_right = 82.0
margin_bottom = 113.0

[node name="MarginCont_timers" type="MarginContainer" parent="."]
margin_left = 449.0
margin_right = 449.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_pos_input" parent="MarginCont_timers" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 40.0

[node name="bpm_input" parent="MarginCont_timers" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 40.0

[node name="Popup_cont" type="MarginContainer" parent="."]
visible = false
margin_right = 624.0
margin_bottom = 397.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadAudio" type="FileDialog" parent="Popup_cont"]
margin_right = 624.0
margin_bottom = 397.0
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/konra/Desktop/FYP-Konrad-Knecht/fyp-godot"
current_path = "/Users/konra/Desktop/FYP-Konrad-Knecht/fyp-godot/"

[node name="notice" type="AcceptDialog" parent="Popup_cont"]
margin_right = 624.0
margin_bottom = 397.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 9.0
margin_top = 168.0
margin_right = 1268.0
margin_bottom = 486.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="Waveform" type="Control" parent="ScrollContainer/VBoxContainer"]

[node name="AudioWaveform" parent="ScrollContainer/VBoxContainer/Waveform" instance=ExtResource( 6 )]
margin_right = 1255.0
margin_bottom = 256.0
mouse_filter = 1
color = Color( 0.317647, 0.317647, 0.317647, 1 )

[node name="CursorControl" type="Control" parent="ScrollContainer/VBoxContainer/Waveform"]
margin_top = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/Waveform/CursorControl"]
margin_left = 0.664
margin_right = 1255.66
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
mouse_filter = 1
size_flags_vertical = 1
custom_styles/slider = SubResource( 1 )
value = 1.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CursorPlayback" parent="ScrollContainer/VBoxContainer/Waveform/CursorControl" instance=ExtResource( 8 )]

[node name="CursorStatic" parent="ScrollContainer/VBoxContainer/Waveform/CursorControl" instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="minimum_size_changed" from="." to="." method="_on_editor_minimum_size_changed"]
[connection signal="pressed" from="MarginCont_file/file_btn_cont/import_btn" to="." method="_on_import_btn_pressed"]
[connection signal="pressed" from="MarginCont_play/play_btn_cont/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="down" from="MarginCont_zoom/ZoomBtn" to="." method="_on_ZoomBtn_down"]
[connection signal="up" from="MarginCont_zoom/ZoomBtn" to="." method="_on_ZoomBtn_up"]
[connection signal="tempo_changed" from="MarginCont_timers/bpm_input" to="." method="_on_tempo_changed"]
[connection signal="file_selected" from="Popup_cont/loadAudio" to="." method="_on_loadAudio_file_selected"]
[connection signal="minimum_size_changed" from="ScrollContainer" to="." method="_on_ScrollContainer_minimum_size_changed"]
[connection signal="resized" from="ScrollContainer" to="." method="_on_ScrollContainer_resized"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Waveform/CursorControl/HSlider" to="." method="_on_HSlider_value_changed"]
